--- a/aa.html
+++ b/aa.html
@@ -4,11 +4,6 @@
 <meta charset="utf-8">
 <title>无标题文档</title>
 </head>
-<<<<<<< HEAD
-master分支
-=======
-<body>
-aa分支
->>>>>>> hou
+ 新分支 cc
 </body>
 </html>
